--- a/src/resources/views/me/stored-courses.hbs
+++ b/src/resources/views/me/stored-courses.hbs
@@ -1,13 +1,27 @@
-<div class="mt-4">
+<form  class="mt-4" name="container-form" method="POST" action="/courses/handle-form-actions">
     <div>
         <h3>Khóa học của tôi</h3>
-        <a href="/me/trash/courses">Thùng rác</a>
+        <a href="/me/trash/courses">Thùng rác ({{deletedCount}})</a>
+
+        <div class="mt-4 d-flex align-items-center">
+            <div class="form-check">
+                <input class="form-check-input" type="checkbox" value="" id="checkbox-all">
+                <label class="form-check-label" for="checkbox-all">
+                Chọn tất cả
+                </label>
+            </div>
+            <select class="form-control form-control-sm checkbox-select-all-options" name="action" required >
+                <option value="">--Hành động--</option>
+                <option value="delete">Xóa</option>
+            </select>
+            <button class="btn btn-primary btn-sm check-all-submit-btn disabled">Thực hiện</button>
+        </div>
     </div>
 
     <table class="table mt-4">
         <thead>
             <tr>
-                <th scope="col">#</th>
+                <th scope="col" colspan="2">#</th>
                 <th scope="col">Tên khóa học</th>
                 <th scope="col">Mô tả</th>
                 <th scope="col">Trình độ</th>
@@ -18,6 +32,11 @@
         <tbody>
             {{#each courses}}
             <tr>
+                <td>
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" name="courseIds[]" value="{{this._id}}">
+                    </div>
+                </td>
                 <th scope="row">{{sum @index 1}}</th>
                 <td>{{this.name}}</td>
                 <td>{{this.description}}</td>
@@ -38,7 +57,7 @@
             {{/each}}
         </tbody>
     </table>
-</div>
+</form>
 
 {{!--Confirm delete courses--}}
 
@@ -70,16 +89,55 @@
     document.addEventListener('DOMContentLoaded', function(){
         var courseId;
         var deleteForm = document.forms['delete-course-form'];
+        var containerForm = document.forms['container-form'];
         var btnDeleteCourse = document.getElementById('btn-delete-course');
-
+        var checkboxAll = $('#checkbox-all');
+        var courseItemCheckbox = $('input[name="courseIds[]"]');
+        var checkAllSubmitBtn = $('.check-all-submit-btn');
+        //When dialog confirm clicked
         $('#delete-course-modal').on('show.bs.modal', function (event) {
         var button = $(event.relatedTarget)
         courseId = button.data('id');
     });
 
+        //When delete course button clicked
         btnDeleteCourse.onclick = function(){
         deleteForm.action = '/courses/' + courseId + '?_method=DELETE';
         deleteForm.submit();
     }
+
+        checkboxAll.change(function(){
+            var isCheckedAll = $(this).prop('checked');
+            courseItemCheckbox.prop('checked', isCheckedAll);  
+            renderCheckAllSubmitBtn();
+        });
+
+    // Course item checkbox change
+        courseItemCheckbox.change(function() {
+            var isCheckedAll = courseItemCheckbox.length === $('input[name="courseIds[]"]:checked').length;
+            checkboxAll.prop('checked', isCheckedAll);
+            renderCheckAllSubmitBtn();
+        });
+
+        //Check all submit button clicked
+        checkAllSubmitBtn.on('submit', function(e){
+            var isSubmittable = !$(this).hasClass('disabled')
+            if(!isSubmittable){
+                e.preventDefault();
+            }
+        })
+
+        //Re-Render check all submit button
+        function renderCheckAllSubmitBtn(){
+            var checkedCount =  $('input[name="courseIds[]"]:checked').length;
+            if(checkedCount > 0){
+                checkAllSubmitBtn.removeClass('disabled');
+            }
+            else{
+                checkAllSubmitBtn.addClass('disabled')
+            }
+        }
+
+        
 });
 </script>
