--- a/src/resources/views/me/trash-courses.hbs
+++ b/src/resources/views/me/trash-courses.hbs
@@ -1,28 +1,47 @@
-<div class="mt-4">
+<form  class="mt-4" name="container-form" method="POST" action="/courses/handle-form-actions">
     <div>
-        <a href="/me/stored/courses">Danh sách khóa học</a>
         <h3>Khóa học đã xóa</h3>
+        <a href="/me/stored/courses">Danh sách khóa học</a>
+        <div class="mt-4 d-flex align-items-center">
+            <div class="form-check">
+                <input class="form-check-input" type="checkbox" value="" id="checkbox-all">
+                <label class="form-check-label" for="checkbox-all">
+                Chọn tất cả
+                </label>
+            </div>
+            <select class="form-control form-control-sm checkbox-select-all-options" name="action" required >
+                <option value="">--Hành động--</option>
+                <option value="restore">Khôi phục</option>
+            </select>
+            <button class="btn btn-primary btn-sm check-all-submit-btn disabled">Thực hiện</button>
+        </div>
+    </div>
     </div>
 
     <table class="table mt-4">
         <thead>
             <tr>
-                <th scope="col">#</th>
+                <th scope="col" colspan="2">#</th>
                 <th scope="col">Tên khóa học</th>
                 <th scope="col">Mô tả</th>
                 <th scope="col">Trình độ</th>
-                <th scope="col">Thời gian tạo</th>
+                <th scope="col">Thời gian xóa</th>
                 <th scope="col"></th>
             </tr>
         </thead>
         <tbody>
             {{#each courses}}
             <tr>
+                <td>
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" name="courseIds[]" value="{{this._id}}">
+                    </div>
+                </td>
                 <th scope="row">{{sum @index 1}}</th>
                 <td>{{this.name}}</td>
                 <td>{{this.description}}</td>
                 <td>{{this.level}}</td>
-                <td>@{{this.createdAt}}</td>
+                <td>@{{this.deletedAt}}</td>
                 <td>
                     <a href="" class="btn btn-link btn-restore" data-id="{{this._id}}">Khôi phục</a>
                     <a href="" class="btn btn-link" data-toggle="modal" data-id="{{this._id}}" data-target="#delete-course-modal">Xóa vĩnh viễn</a>
@@ -38,7 +57,7 @@
             {{/each}}
         </tbody>
     </table>
-</div>
+</form>
 
 {{!--Confirm delete courses--}}
 
@@ -71,8 +90,12 @@
         var courseId;
         var deleteForm = document.forms['delete-course-form'];
         var restoreForm = document.forms['restore-course-form'];
+        var containerForm = document.forms['container-form'];
         var btnDeleteCourse = document.getElementById('btn-delete-course');
         var restoreBtn = $('.btn-restore');
+        var checkboxAll = $('#checkbox-all');
+        var courseItemCheckbox = $('input[name="courseIds[]"]');
+        var checkAllSubmitBtn = $('.check-all-submit-btn');
         $('#delete-course-modal').on('show.bs.modal', function (event) {
         var button = $(event.relatedTarget)
         courseId = button.data('id');
@@ -90,5 +113,37 @@
         restoreForm.action = '/courses/' + courseId +  '/restore?_method=PATCH';
         restoreForm.submit();
     })
+
+    checkboxAll.change(function(){
+            var isCheckedAll = $(this).prop('checked');
+            courseItemCheckbox.prop('checked', isCheckedAll);  
+            renderCheckAllSubmitBtn();
+        });
+
+    // Course item checkbox change
+        courseItemCheckbox.change(function() {
+            var isCheckedAll = courseItemCheckbox.length === $('input[name="courseIds[]"]:checked').length;
+            checkboxAll.prop('checked', isCheckedAll);
+            renderCheckAllSubmitBtn();
+        });
+
+        //Check all submit button clicked
+        checkAllSubmitBtn.on('submit', function(e){
+            var isSubmittable = !$(this).hasClass('disabled')
+            if(!isSubmittable){
+                e.preventDefault();
+            }
+        })
+
+        //Re-Render check all submit button
+        function renderCheckAllSubmitBtn(){
+            var checkedCount =  $('input[name="courseIds[]"]:checked').length;
+            if(checkedCount > 0){
+                checkAllSubmitBtn.removeClass('disabled');
+            }
+            else{
+                checkAllSubmitBtn.addClass('disabled')
+            }
+        }
 });
 </script>
