--- a/src/resources/views/me/stored-courses.hbs
+++ b/src/resources/views/me/stored-courses.hbs
@@ -14,7 +14,7 @@
                 <option value="">--Hành động--</option>
                 <option value="delete">Xóa</option>
             </select>
-            <button class="btn btn-primary btn-sm check-all-submit-btn disabled">Thực hiện</button>
+            <button class="btn btn-primary btn-sm check-all-submit-btn" disabled ="disabled">Thực hiện</button>
         </div>
     </div>
 
@@ -89,7 +89,8 @@
     document.addEventListener('DOMContentLoaded', function(){
         var courseId;
         var deleteForm = document.forms['delete-course-form'];
-        var containerForm = document.forms['container-form'];
+       // var containerForm = document.forms['container-form'];
+        var containerForm = $('form[name="container-form"]');
         var btnDeleteCourse = document.getElementById('btn-delete-course');
         var checkboxAll = $('#checkbox-all');
         var courseItemCheckbox = $('input[name="courseIds[]"]');
@@ -99,13 +100,12 @@
         var button = $(event.relatedTarget)
         courseId = button.data('id');
     });
-
         //When delete course button clicked
         btnDeleteCourse.onclick = function(){
         deleteForm.action = '/courses/' + courseId + '?_method=DELETE';
         deleteForm.submit();
     }
-
+    // CheckboxAll change
         checkboxAll.change(function(){
             var isCheckedAll = $(this).prop('checked');
             courseItemCheckbox.prop('checked', isCheckedAll);  
@@ -119,22 +119,14 @@
             renderCheckAllSubmitBtn();
         });
 
-        //Check all submit button clicked
-        checkAllSubmitBtn.on('submit', function(e){
-            var isSubmittable = !$(this).hasClass('disabled')
-            if(!isSubmittable){
-                e.preventDefault();
-            }
-        })
-
         //Re-Render check all submit button
         function renderCheckAllSubmitBtn(){
             var checkedCount =  $('input[name="courseIds[]"]:checked').length;
             if(checkedCount > 0){
-                checkAllSubmitBtn.removeClass('disabled');
+                checkAllSubmitBtn.attr('disabled', false);
             }
             else{
-                checkAllSubmitBtn.addClass('disabled')
+                checkAllSubmitBtn.attr('disabled', true);
             }
         }
 
