--- a/src/resources/views/me/trash-courses.hbs
+++ b/src/resources/views/me/trash-courses.hbs
@@ -12,6 +12,7 @@
             <select class="form-control form-control-sm checkbox-select-all-options" name="action" required >
                 <option value="">--Hành động--</option>
                 <option value="restore">Khôi phục</option>
+                <option value="forceDelete">Xóa vĩnh viễn</option>
             </select>
             <button class="btn btn-primary btn-sm check-all-submit-btn " disabled>Thực hiện</button>
         </div>
